--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nuxtjs/i18n": "^10.1.0",
     "i18n": "^0.15.1",
     "nuxt": "^4.1.2",
+    "swiper": "^12.0.2",
     "tailwindcss": "^4.1.13",
     "vue": "^3.5.21",
     "vue-router": "^4.5.1"
