--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,7 @@
 {
-  // https://nuxt.com/docs/guide/concepts/typescript
-  "files": [],
   "extends": "./.nuxt/tsconfig.json",
-    "compilerOptions": {
-      "types": ["node", "nuxt"]
-      }
-
+  "compilerOptions": {
+    "strict": true,
+    "types": ["@types/node"]
+  }
 }
