--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxt/image": "^1.11.0",
     "@nuxtjs/i18n": "^10.1.0",
     "i18n": "^0.15.1",
     "nuxt": "^4.1.2",
